--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -28,32 +28,32 @@
     </header>
 
     <main>
+        <h2>Robes en Vedette</h2>
         <section id="featured-robes">
-            <h2>Robes en Vedette</h2>
             <div class="robe-card">
-                <img src="./images/robe1.jpg" alt="Robe 1">
+                <img src="robe5.jpg" alt="Robe 1">
                 <h3>Robe 1</h3>
                 <p>Description de la robe 1.</p>
                 <a href="#" class="btn">Louer</a>
             </div>
             <div class="robe-card">
-                <img src="./images/robe2.jpg" alt="Robe 2">
+                <img src="robe5.jpg" alt="Robe 2">
                 <h3>Robe 2</h3>
                 <p>Description de la robe 2.</p>
                 <a href="#" class="btn">Louer</a>
             </div>
             <div class="robe-card">
-                <img src="./images/robe3.jpg" alt="Robe 3">
+                <img src="robe5.jpg" alt="Robe 3">
                 <h3>Robe 3</h3>
                 <p>Description de la robe 3.</p>
                 <a href="#" class="btn">Louer</a>
             </div>
         </section>
 
+        <h2>Catégories</h2>
         <section id="categories">
-            <h2>Catégories</h2>
             <div class="category">
-                <img src="./images/téléchargement (5).jpg" alt="Catégorie 1">
+                <img src="./images/téléchargement.jpg" alt="Catégorie 1">
                 <h3>Catégorie 1</h3>
             </div>
             <div class="category">
@@ -61,12 +61,36 @@
                 <h3>Catégorie 2</h3>
             </div>
             <div class="category">
-                <img src="./images/images.jpg" alt="Catégorie 3">
+                <img src="./images/téléchargement.jpg" alt="Catégorie 3">
                 <h3>Catégorie 3</h3>
             </div>
         </section>
     </main>
 
+    <div id="container">
+        <div id="toggleContainer">
+           <div id="toggle">
+             <div id="outer3">
+                <div id="slider3"></div>
+             </div>
+          </div>
+        </div>
+        <div id="galleryView">
+          <div id="galleryContainer">
+             <div id="leftView"></div>
+             <button id="navLeft" class="navBtns"><i class="fas fa-arrow-left fa-3x"></i></button>
+             <a id="linkTag">
+                <div id="mainView"></div>
+             </a>
+             <div id="rightView"></div>
+             <button id="navRight" class="navBtns"><i class="fas fa-arrow-right fa-3x"></i></button>
+          </div>
+        </div>
+        <div id="tilesView">
+          <div id="tilesContainer"></div>
+        </div>
+      </div>
+      <br><br>
     <footer>
         <div class="gradient"></div>
         <div class="footer-content">
@@ -84,7 +108,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
